syntax = "proto3";

package catalog;

// Servicio de CatÃ¡logo de Restaurantes
service CatalogService {
  // Valida que los productos existan, pertenezcan al restaurante y estÃ©n disponibles
  rpc ValidateProducts (ValidationRequest) returns (ValidationResponse);
}

// Solicitud de validaciÃ³n con lista de productos
message ValidationRequest {
  int32 restaurant_id = 1;
  repeated ProductItem products = 2;
}

// Item de producto a validar
message ProductItem {
  int32 product_id = 1;
  double expected_price = 2;
  int32 quantity = 3;
}

// Respuesta de validaciÃ³n
message ValidationResponse {
  bool valid = 1;
  string message = 2;
  repeated string errors = 3;  // Lista de errores especÃ­ficos si hay problemas
}
```

---

## ğŸ“ DÃ³nde colocarlo

Coloca este archivo en:
```
Practica3/
â””â”€â”€ proto/
    â”œâ”€â”€ auth.proto         â† Ya lo tienes
    â””â”€â”€ catalog.proto      â† Este archivo nuevo