import { Controller } from '@nestjs/common';
import { GrpcMethod } from '@nestjs/microservices';
import { CatalogService } from './catalog.service';

@Controller()
export class CatalogController {
  constructor(private readonly catalogService: CatalogService) {}

  @GrpcMethod('CatalogService', 'ValidateProducts')
  async validateProducts(data: any) {
    console.log('üîç Validaci√≥n solicitada:', {
      restaurantId: data.restaurant_id,
      productCount: data.products?.length,
    });

    try {
      const result = await this.catalogService.validateProducts(
        data.restaurant_id,
        data.products,
      );

      console.log('‚úÖ Resultado validaci√≥n:', result);
      return result;
    } catch (error) {
      console.error('‚ùå Error en validaci√≥n:', error);
      return {
        valid: false,
        message: 'Error en validaci√≥n',
        errors: [error.message],
      };
    }
  }
}